kubernetes/backends-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: backends
  name: backends
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backends
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: backends
    spec:
      containers:
        - image: backends
          name: backends
          resources: {}
      restartPolicy: Always
status: {}
