kubernetes/django-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: django-backend
  name: django-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: django-backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/nginx_network: "true"
        io.kompose.service: django-backend
    spec:
      containers:
        - image: django-backend
          name: django_backend
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /app/backend/django_backend/testing/
              name: django-backend-claim0
      restartPolicy: Always
      volumes:
        - name: django-backend-claim0
          persistentVolumeClaim:
            claimName: django-backend-claim0
status: {}
