kubernetes/flask-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: flask-backend
  name: flask-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flask-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/nginx_network: "true"
        io.kompose.service: flask-backend
    spec:
      containers:
        - image: flask-backend
          name: flask_backend
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
